Fix select form elements alignment

--- a/public/theme/css/form.css
+++ b/public/theme/css/form.css
@@ -76,8 +76,7 @@ form > div > .select select {
     width: 100%;
     background-color: transparent;
     background-image: none;
-    padding: 0.25rem 0;
-    padding-bottom: 0.75rem;
+    padding-bottom: 1rem;
 }
 
 main > header form > div:not(.clear):not(.control) {
